# rust_in_action_study

./: .gitignore  Cargo.toml  LICENSE  README.md  rust_in_action.ipynb
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: pull_request.yml
actionkv/: Cargo.toml
actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs
allocation/: Cargo.toml
allocation/src/: main.rs
chip8/src/: main.rs
clock/: Cargo.toml
clock/src/: main.rs
cubesat/: Cargo.toml
cubesat/src/: main.rs
decimal/src/: main.rs
file/: Cargo.toml
file/src/: main.rs
fixed_point/: Cargo.toml
fixed_point/src/: main.rs
globalerror/: .gitignore  Cargo.toml
globalerror/src/: main.rs
grep-lite/: Cargo.toml  Makefile.toml
grep-lite/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
mget/: Cargo.toml
mget/src/: dns.rs  ethernet.rs  http.rs  main.rs
pointer/src/: main.rs
random/src/: main.rs
render-hex/: Cargo.toml
render-hex/src/: main.rs
resolve/: Cargo.toml
resolve/src/: main.rs
serde-eg/: Cargo.toml
serde-eg/src/: main.rs
small-rpg/: Cargo.toml
small-rpg/src/: main.rs
vmem/src/: main.rs
